--- a/lab1/lab1.cmp
+++ b/lab1/lab1.cmp
@@ -1,9 +1,9 @@
 	component lab1 is
 		port (
-			bouton_export : in  std_logic                    := 'X'; -- export
-			clk_clk       : in  std_logic                    := 'X'; -- clk
-			led_export    : out std_logic_vector(7 downto 0);        -- export
-			reset_reset_n : in  std_logic                    := 'X'  -- reset_n
+			bouton_export : in  std_logic_vector(7 downto 0) := (others => 'X'); -- export
+			clk_clk       : in  std_logic                    := 'X';             -- clk
+			led_export    : out std_logic_vector(7 downto 0);                    -- export
+			reset_reset_n : in  std_logic                    := 'X'              -- reset_n
 		);
 	end component lab1;
 
